--- a/assets/product.html
+++ b/assets/product.html
@@ -83,54 +83,54 @@
 			</div>
 			<h1>Manuals</h1>
 			<div>
-				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Parts &amp; Accessories</a></h2>
+				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Manuals</a></h2>
 				<p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Parts &amp; Accessories</a></h2>
+				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Manuals</a></h2>
 				<p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Parts &amp; Accessories</a></h2>
+				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Manuals</a></h2>
 				<p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Parts &amp; Accessories</a></h2>
+				<a href="#"><img src="images/manualplace.png" alt="Manual placeholder img"/></a><h2><a href="#">Manuals</a></h2>
 				<p> A partial listing of parts available for your Heathkit ham gear. Our parts inventory is extensive - we have listed some of the more popular items. Please contact us for price and availability.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<h1>Parts</h1>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Parts</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Parts</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Parts</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Parts</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<h1>Accessories</h1>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/accessoryplace.png" alt="Accessory placeholder img"/></a><h2><a href="#">Accessories</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
 			<div>
-				<a href="#"><img src="images/partplace.png" alt="Parts placeholder img"/></a><h2><a href="#">Repairs</a></h2>
+				<a href="#"><img src="images/accessoryplace.png" alt="Accessory placeholder img"/></a><h2><a href="#">Accessories</a></h2>
 				<p> A list of  service fees arranged alpabetically by model number.  This list shows the standard charge for labor on the Heathkit models we service.</p>
 				<p class="price"><span>Price:</span> <span>$1150.00</span></p> <div class="clearfix"></div>
 			</div>
