--- a/assets/indivproduct.html
+++ b/assets/indivproduct.html
@@ -31,8 +31,8 @@
 		<img src="images/logo.png" alt="RTO Electronics logo" />
 		<ul id="navbar">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="product.html">Products &amp; Services</a></li>
-			<li><a id="currentpage" href="about.html">About Us</a></li>
+			<li><a id="currentpage" href="product.html">Products &amp; Services</a></li>
+			<li><a  href="about.html">About Us</a></li>
 			
 		</ul>
 	</div>
