Update address and photo.

--- a/home/static/about.html
+++ b/home/static/about.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="radio, ham, electronics, kit, heath, ron, oxley, wm8z" />
 	<meta name="description" content="Ham radio sales and repair services" />
 	<meta name="robots" content="all" />
-	
+
 	<title>RTO Electronics | About Us</title>
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js">
@@ -17,13 +17,13 @@
 	</script>
 	<script type="text/javascript" src="scripts/slideshow.js">
 	</script>
-	
+
 	<style type="text/css" media="all">
 		@import "css/reset.css";
 		@import "css/styles.css";
 		@import url(http://fonts.googleapis.com/css?family=Candal);
 	</style>
-	
+
 </head>
 <body>
 <div id="container">
@@ -33,13 +33,13 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="product.html">Products &amp; Services</a></li>
 			<li><a id="currentpage" href="about.html">About Us</a></li>
-			
+
 		</ul>
 	</div>
 	<div id="content">
 		<div id="about">
 			<div id="hcard-Ronald-T.-Oxley" class="vcard">
-				<img src="http://a4.sphotos.ak.fbcdn.net/hphotos-ak-ash4/226417_1017951366209_1147870502_30057817_676_n.jpg" alt="photo of Ronald" class="photo"/>
+				<img src="https://scontent.xx.fbcdn.net/v/t1.0-9/318077_3529995605745_554614988_n.jpg?oh=b167b9332984a039e5f25299864117bb&oe=5919058D" alt="photo of Ronald" class="photo"/>
 				<a class="url" href="http://www.rtoham.com">
 					<span class="given-name">Ronald</span>
 					<span class="additional-name">T.</span>
@@ -48,15 +48,15 @@
 				<div class="org">RTO Electronics</div>
 				<a class="email" href="mailto:hamtech@rtoham.com">hamtech@rtoham.com</a>
 				<div class="adr">
-					<div class="street-address">601 E. First St.</div>
-					<span class="locality">Calexico</span>, 
-					<span class="region">CA</span>, 
-					<span class="postal-code">92231</span>
+					<div class="street-address">7280 Territorial Road</div>
+					<span class="locality">Benton Harbor</span>,
+					<span class="region">MI</span>
+					<span class="postal-code">49022</span>
 					<span class="country-name">United States</span>
 				</div>
 				<div class="tel">269.468.7780</div>
 			</div>
-		
+
 			<p>	Formerly located in Benton Harbor, Michigan where the Heathkits were made,  RTO Electronics is owned and operated by Ron Oxley, WM8Z.  We have been servicing Heathkit amateur radio equipment here at RTO since 1990 when Ron left the Heath Company after 12 years in the service department.  While we specialize in repairing the Heathkit ham gear we can also service other brands.  We also stock many of the repair parts needed to service the Heathkits and we can supply  many of the original Heathkit manuals for ham gear.</p>
 		</div>
 		<div id="blog">
@@ -75,7 +75,7 @@
 		</ul>
 		<p>&#169;2001 RTO Electronics. Designed by Robert and Steven Oxley.</p>
 		<p>valid xhtml. valid css. all rights reserved.</p>
-		
+
 	</div>
 </div>
 </body>
